--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -43,27 +43,27 @@ Code and Demo: https://xuyaoxun.github.io/MuCodec_demo/.
 ## 1.Introduction: 引言
 
 Music codecs\cite{codec1,codec2,codec3} are a crucial component in the field of audio codec\cite{audiocodec1,audiocodec2,audiocodec3} research. 
-The significance of ultra low-bitrate compression lies in its potential applications, such as music transmission, where the bitrate of MP3\cite{casas2021mp3} is considerably high, and music generation\cite{copet2024musicgen,gao2024endtoendapproachchordconditionedsong,lei2024songcreatorlyricsbaseduniversalsong}, where short sequences are highly effective for language model construction. 
+The significance of ultra low-bitrate compression lies in its potential applications, such as music transmission, where the bitrate of MP3\cite{casas2021mp3} is considerably high, and music generation\cite{[MusicGen [8]](../Speech_LLM/2023.06.08_MusicGen.md); gao2024endtoendapproachchordconditionedsong,lei2024songcreatorlyricsbaseduniversalsong}, where short sequences are highly effective for language model construction. 
 Furthermore, considering the diversity of background, sound events, and vocals in music, achieving high-fidelity reconstruction at ultra low bitrates would signify a substantial advancement in the field of universal audio generation.
 
-Recent music compression techniques based on neural codecs\cite{nerualcodec1,nerualcodec2,nerualcodec3,nerualcodec4,nerualcodec5} attempt to compress music directly into discrete tokens. 
+Recent music compression techniques based on neural codecs ([SpeechX [11]](../Speech_LLM/2023.08.14_SpeechX.md); [AudioDec [12]](2023.05.26_AudioDec.md); [VALL-E [13]](../Speech_LLM/2023.01.05_VALL-E.md); [FunCodec [14]](2023.09.14_FunCodec.md); [APCodec [15]](2024.02.16_APCodec.md)) attempt to compress music directly into discrete tokens. 
 While discrete representations often yield higher compression densities, they inherently suffer from substantial information loss. 
 To reconstruct a more accurate approximation of the original features from discrete tokens, a more robust representation and a stronger decoder are necessary. 
-Common codecs like Encodec\cite{encodec} and Generative Adversarial Networks(GAN)-based methods\cite{gan1,gan2,gan3} exhibit limitations in achieving particularly low bitrates.
+Common codecs like [EnCodec [16]](2022.10.24_EnCodec.md) and Generative Adversarial Networks(GAN)-based methods\cite{gan1,gan2,gan3} exhibit limitations in achieving particularly low bitrates.
 
-In recent years, some research and works have focused on using semantic modeling to represent musical characteristics and utilizing diffusion\cite{diffusion} for reconstruction, such as SemantiCodec\cite{liu2024semanticodec} and SEED-TTS\cite{anastassiou2024seed}. 
+In recent years, some research and works have focused on using semantic modeling to represent musical characteristics and utilizing [diffusion [20]](../Diffusion/DDPM.md) for reconstruction, such as [SemantiCodec [21]](2024.04.30_SemantiCodec.md) and [SEED-TTS [22]](../Speech_LLM/2024.06.04_Seed-TTS.md). 
 However, these models are not specifically designed for music-related tasks. 
 Compared to speech tasks, music has a rich background, including instruments like piano and bass, and vocals that should be clearly discernible from the background music. 
 Therefore, it is essential to consider both semantic and acoustic information; focusing solely on one aspect would compromise the overall perceptual quality of the reconstructed audio.
 
-To address these challenges, we propose a flow-matching-based\cite{lipman2022flow} music codec ***MuCodec***. 
+To address these challenges, we propose a [flow-matching-based [23]](../Flow/2022.10.06_Flow_Matching.md) music codec ***MuCodec***. 
 ***MuCodec*** uses a specialized feature extractor, ***MuEncoder***, based on the two key aspects of music: vocals and background. 
 The ***MuEncoder*** features are then discretized using RVQ and employed as conditions for reconstructing Mel-VAE features via flow-matching. 
-We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder\cite{liu2024audioldm2}, and ultimately, the music is reconstructed using HiFi-GAN\cite{kong2020hifi}. 
+We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder ([AudioLDM [24]](../Diffusion/2023.08.10_AudioLDM2.md)), and ultimately, the music is reconstructed using [HiFi-GAN [25]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md). 
 Our contributions can be summarized as follows:
 
 - We propose ***MuCodec***, which achieves the lowest bitrate to date while maintaining the highest-quality music reconstruction capabilities. 
-- ***MuCodec*** employs ***MuEncoder*** as the feature extractor and Diffusion Transformer (DiT) \cite{dit} along with flow-matching-based method for fine-grained music modeling.
+- ***MuCodec*** employs ***MuEncoder*** as the feature extractor and [Diffusion Transformer (DiT) [26]](../Diffusion/DiT.md) along with flow-matching-based method for fine-grained music modeling.
 - Both subjective and objective experiments demonstrate that ***MuCodec*** achieves the best performance to date in music reconstruction tasks at both low and high bitrates.
 
 ## 2.Related Works: 相关工作
@@ -109,7 +109,7 @@ A pretrained Mel-VAE decoder serves as our Mel spectrogram generator, while a pr
 
 In music reconstruction tasks, the two most important evaluation aspects are vocals and music background. 
 To better verify the benefits of simultaneously focusing on these two features in music reconstruction tasks, we design comparative experiments to model these two aspects separately. 
-Specifically, we choose pre-trained HuBERT\cite{hsu2021hubert} and MERT\cite{li2023mert} models to separately model vocals and music background. 
+Specifically, we choose pre-trained [HuBERT [30]](../Speech_Representaion/2021.06.14_HuBERT.md) and [MERT [31]](../Speech_Representaion/MERT.md) models to separately model vocals and music background. 
 HuBERT typically contains richer semantic information, while MERT focuses more on acoustic features. 
 
 #### Scalability
@@ -125,7 +125,7 @@ To train ***MuCodec***, we utilize a large-scale internal music dataset of Chine
 We segment the music into fixed 35.84-second lengths during training. 
 For fairness, the test set comprises randomly selected 250 Chinese and 250 English song segments, each 20-30 seconds long with corresponding lyrics.
 
-For the GAN-based method, we use a fully convolutional architecture following Descript Audio Codec(DAC)\cite{dac} encoder and decoder, changing the quantizer to RVQ. 
+For the GAN-based method, we use a fully convolutional architecture following [Descript Audio Codec (DAC) [29]](2023.06.11_Descript-Audio-Codec.md) encoder and decoder, changing the quantizer to RVQ. 
 We match its model size to ***MuCodec***. 
 To further analyze, we also experiment with replacing its encoder directly with ***MuEncoder***.
 
@@ -138,9 +138,9 @@ In subjective evaluations, we randomly select 5 Chinese and 5 English song clips
 In objective evaluations, we choose two types of metrics corresponding to the two aspects of music: background and vocals. 
 We use ViSQOL\cite{hines2015visqol} as an audio quality assessment metric.
 Since the background can interfere with vocal evaluation, we separate the vocals and background of the generated music using a pre-trained separation model\cite{seperate}. 
-We then calculate the similarity between the generated vocal part and the original vocal part with a pre-trained speaker similarity model\cite{speaker} and use Whisper-v2\cite{radford2023robust} to compute the Word Error Rate (WER) of the generated vocal part as the vocal clarity evaluation metric.
+We then calculate the similarity between the generated vocal part and the original vocal part with a pre-trained speaker similarity model\cite{speaker} and use [Whisper [36]](../Speech_LLM/2022.12.06_Whisper.md)-v2 to compute the Word Error Rate (WER) of the generated vocal part as the vocal clarity evaluation metric.
 
-In the ***MuEncoder*** setting, we employ a 13-layer Conformer\cite{gulati2020conformer} model. 
+In the ***MuEncoder*** setting, we employ a 13-layer [Conformer [37]](../ASR/2020.05.16_Conformer.md) model. 
 We assign a weight of 1 to the music reconstruction loss and 0.2 to the lyrics recognition loss, which consists of both CTC Loss and RNN-T Loss.
 
 In the RVQ setting, we design two configurations for high- and low-bitrate scenarios. 
@@ -149,7 +149,7 @@ Conversely, for the relatively high-bitrate scenarios, we use four codebooks, ea
 
 In the flow-matching setting, we employ a 24-layer Transformer2d model\cite{transformer2d} for reconstruction, featuring an attention head dimension of 72, a norm epsilon of 1e-06, and 32 norm groups. 
 We use ada norm single as the norm type and set the number of ada norm embeds to 1000. 
-During the generation process, we utilize sampling via classifier-free guidance\cite{cfg}, specifically setting the guidance scale value to 1.5. 
+During the generation process, we utilize sampling via [classifier-free guidance [39]](../Diffusion/Classifier-Free_Guidance.md), specifically setting the guidance scale value to 1.5. 
 
 During inference, we choose a denoising step size of 50 for flow-matching to balance reconstruction quality and computational efficiency. 
 We use a pre-trained open-source Mel-VAE decoder and HiFi-GAN for both training and inference. 
@@ -157,7 +157,7 @@ Our experiments run on 8 40G-A100 GPUs with a batch size of 4.
 
 ## 5.Results: 结果
 
-### Main Comparation
+### Main Comparison
 
 In this experiment, we offer a thorough comparison of various prevalent reconstruction methods. 
 ***MuCodec*** undergoes an in-depth comparative analysis from both objective and subjective assessments, with objective results in TABLE I.
