更新相对链接

--- a/Models/Flow/2023.09.06_Matcha-TTS.md
+++ b/Models/Flow/2023.09.06_Matcha-TTS.md
@@ -78,7 +78,7 @@
 > DPMs have been applied to numerous speech-synthesis tasks with impressive results, including waveform generation ([WaveGrad](../TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)) and end-to-end TTS ([WaveGrad2](../TTS3_Vocoder/2021.06.17_WaveGrad2.md)).
 > [Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md) was first to apply DPMs for acoustic modelling.
 > Shortly after, [Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) conceptualised the diffusion process as an SDE.
-> Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, [TorToiSe-TTS](../_tmp/2023.05.12_TorToise-TTS.md) demonstrated DPMs in an autoregressive TTS model with quantised latents.
+> Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, [TorToiSe-TTS](../Diffusion/2023.05.12_TorToise-TTS.md) demonstrated DPMs in an autoregressive TTS model with quantised latents.
 > 
 > The above models -- like many modern TTS acoustic models -- use an encoder-decoder architecture with Transformer blocks in the encoder.
 > Many models, e.g., [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md) and [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md), use sinusoidal position embeddings for positional dependences.
@@ -107,7 +107,7 @@
 
 ### 2.2.Flow Matching and TTS
 
-> Currently, some of the highest-quality TTS systems either utilize DPMs ([Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [TorToiSe-TTS](../_tmp/2023.05.12_TorToise-TTS.md)) or discrete-time normalizing flows ([VITS](../E2E/2021.06.11_VITS.md); [OverFlow](../TTS2_Acoustic/2022.11.13_OverFlow.md)), with continuous-time flows being less explored.
+> Currently, some of the highest-quality TTS systems either utilize DPMs ([Grad-TTS](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [TorToiSe-TTS](../Diffusion/2023.05.12_TorToise-TTS.md)) or discrete-time normalizing flows ([VITS](../E2E/2021.06.11_VITS.md); [OverFlow](../TTS2_Acoustic/2022.11.13_OverFlow.md)), with continuous-time flows being less explored.
 > Lipman et al.\ \cite{lipman2023flow} recently introduced a framework for synthesis using ODEs that unifies and extends probability flow ODEs and CNFs.
 > They were then able to present an efficient approach to learn ODEs for synthesis, using a simple vector-field regression loss called **conditional flow matching (CFM)**, as an alternative to learning score functions for DPMs or using numerical ODE solvers at training time like classic CNFs \cite{chen2018neural}.
 > Crucially, by leveraging ideas from optimal transport, CFM can be set up to yield ODEs that have simple vector fields that change little during the process of mapping samples from the source distribution onto the data distribution, since it essentially just transports probability mass along straight lines.
