--- a/Models/Speech_LLM/2024.02.12_BASE-TTS.md
+++ b/Models/Speech_LLM/2024.02.12_BASE-TTS.md
@@ -71,7 +71,7 @@
 > In CV, pre-trained models that learn from hundreds of millions of image-caption pairs have achieved top performance on image-to-text benchmarks \cite{clip1,tejankar2021fistful,shen2022k}, while delivering remarkably photo-realistic results in text-to-image tasks \cite{rombach2022high, ramesh2022hierarchical, nichol2022glide, saharia2022photorealistic, yu2022scaling}.
 > This progress has been enabled by Transformer-based architectures \cite{originaltransformerpaper} that drive improvements using many orders of magnitude more data than previous models.
 > Similar advances are now occurring in Speech Processing and Text-to-Speech (TTS), with models leveraging thousands of hours of data that push synthesis ever closer towards human-like speech.
-> Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md), or diffusion decoders ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)).
+> Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md), or diffusion decoders ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)).
 >
 > Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio ([Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); ecat, [VITS [24]](../../Models/E2E/2021.06.11_VITS.md); DBLP:conf/iclr/0006H0QZZL21; [Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
 > Such systems can create well-enunciated speech that is occasionally expressive for the target speakers, but typically cannot generalize beyond the small amount of training data to render ambiguous and complex texts with truly expressive spoken performance \cite{triantafyllopoulos2023overview,tahon2018can,schnell2022controllability}.
@@ -80,7 +80,7 @@
 > 
 > In this paper, we introduce ***BASE TTS***: Big Adaptive Streamable TTS with Emergent abilities.
 > It is a multi-lingual and multi-speaker Large TTS (LTTS) system trained on around 100K (doubling previous high in [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md)) hours of public domain speech data.
-> ***BASE TTS*** follows the approach of casting TTS as a next-token-prediction problem ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)), inspired by the success of LLMs.
+> ***BASE TTS*** follows the approach of casting TTS as a next-token-prediction problem ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)), inspired by the success of LLMs.
 > This approach is usually applied in combination with large amount of training data to achieve strong multi-lingual and multi-speaker capabilities (e.g.
 > one-shot voice cloning).
 > Our goal is to improve general TTS quality and study how scaling affects the model's ability to produce appropriate prosody and expression for challenging text inputs, similar to how LLMs acquire new abilities through data and parameter scaling, a phenomenon known as "emergence" or "emergent abilities" in the LLM literature \cite{wei2022emergent, webb2023emergent}. \cite{wei2022emergent} defines \textit{emergent abilities of large language models} as "abilities that are not present in smaller-scale models but are present in large-scale models;" for example, they show that on a range of few-shot tasks, model capability stays at a low level from 10\textsuperscript{18} to 10\textsuperscript{22} training FLOPs, but makes a drastic jump from 10\textsuperscript{22} to 10\textsuperscript{24}.
@@ -88,7 +88,7 @@
 > See more details in Section \ref{sec:evaluation}.
 >
 > We design ***BASE TTS*** to model a joint distribution of text tokens followed by discrete speech representations, which we refer to as speechcodes.
-> Discretization of speech through audio codecs ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [35]](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
+> Discretization of speech through audio codecs ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [35]](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
 > Specifically, we model speechcodes using a decoder-only autoregressive Transformer with a cross-entropy training objective.
 > Despite its simplicity, this objective can capture complex probability distributions of expressive speech, thus alleviating the oversmoothing problem seen in early neural TTS systems \cite{ren2022revisiting}.
 > As an implicit language model, ***BASE TTS*** is also observed to make a qualitative jump in prosody rendering once a large enough variant is trained on sufficient data. 
@@ -116,7 +116,7 @@
 
 > Casting TTS problem as next token prediction has gained popularity in recent years due to how easy it is to scale language models to large data and model sizes.
 >
-> The first model using this approach was [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md) released in 2022.
+> The first model using this approach was [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md) released in 2022.
 > It combines a GPT2-style speechcode language model with a diffusion decoder and an off-the-shelf vocoder, achieving remarkable few-shot capability.
 > [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md) followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction ([EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)). 
 > [VALL-E X [61]](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md) replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt.
@@ -191,7 +191,7 @@
 
 > Discrete representation is foundational to the success of LLM, but identifying a compact and informative representation is less obvious in speech than in text, and less explored.
 > For ***BASE TTS***, we first experiment with a [Vector Quantized Variational Autoencoder (VQ-VAE) [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md) baseline, where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
-> VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)).
+> VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)).
 >
 > In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
 > In this method, we discretize features extracted from a WavLM SSL model to reconstruct a mel-spectrogram.
@@ -260,9 +260,9 @@ $$
 
 ### 3.4.Waveform Generation
 
-> Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
 > Diffusion-based TTS decoding can generate high-quality speech, but it suffers from slow inference and cannot generate samples incrementally - This lack of streamabilility forces us to obtain the audio output for the entire sequence in one go.
-> Furthermore, the diffusion model in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md) predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline. 
+> Furthermore, the diffusion model in [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md) predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline. 
 >
 > Our proposed decoder, inspired by \cite{ecat}, is trained in an end-to-end fashion to predict waveforms.
 > Our variant uses speechcodes as an input to the model instead of phoneme encodings and prosody latents.
@@ -273,7 +273,7 @@ $$
 > In addition to simplifying the overall system, we hypothesize that training the decoder and vocoder end-to-end yields higher-quality speech. 
 >
 > In practice, instead of speechcodes, the speechcode decoder takes as an input the last hidden state of the autoregressive Transformer. 
-> We do so because the dense latent representation provides much richer information than a single speechcode, following [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> We do so because the dense latent representation provides much richer information than a single speechcode, following [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
 > During training, we feed the text and target codes to the trained SpeechGPT (with parameters frozen) and then condition the decoder on the last hidden state.
 > Feeding the last hidden states of SpeechGPT helps improving the segmental and acoustic quality of speech, but also couples the decoder to a specific version of SpeechGPT.
 > This complicates experimentation because it forces the two components to be always built sequentially. 
@@ -408,7 +408,7 @@ $$
 
 ### 5.4.***BASE TTS*** vs. industry baselines
 
-> We select three industry baselines with publicly available pre-trained models: [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> We select three industry baselines with publicly available pre-trained models: [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
 > We conduct the comparison exclusively in one-shot setting, using 10-second reference clip for two US English speakers which ***BASE TTS*** was not previously trained or evaluated on. 
 >
 > As seen in Table \ref{competitor-mushra}, ***BASE TTS*** obtains significantly higher naturalness scores in MUSHRA than baseline systems, among two US English speakers tested.
