--- a/Models/MultiModal/2024.09.26_EMOVA.md
+++ b/Models/MultiModal/2024.09.26_EMOVA.md
@@ -93,6 +93,31 @@ The main contributions of this work contain three parts:
 
 ## 2.Related Works: 相关工作
 
+### Vision Large Language Models (VLLMs) 
+
+VLLMs integrate vision modality into Large Language Models (LLMs)~\citep{touvron2023llama,chen2023gaining}, enabling advanced understanding and reasoning over visual instructions~\citep{liu2023llava,bai2023qwen,gou2023mixture,gou2024eyes}.
+Recent efforts in VLLMs can be broadly categorized into three directions, including 
+1) \textit{Vision encoders}~\citep{oquab2023dinov2,chen2021multisiam,chen2023mixed} are enhanced and aggregated for robust representations~\citep{lin2023sphinx,li2024mini,tong2024cambrian}.
+2) \textit{High-resolution} methods are proposed to overcome the fixed resolution of pre-trained vision encoders (e.g., $336 \times 336$ for CLIP~\citep{radford2021learningtransferablevisualmodels}), empowering LLMs to perceive fine-grained visual information~\citep{liu2024llavanext,dong2024xcomposer2-4khd,huang2024hires,luo2024feast}.
+3) \textit{High-quality instruction data} is essential for the VLLMs to generate accurate and well-formed responses following instructions~\citep{laurenccon2024matters,li2024llavaonevisioneasyvisualtask,chen2024internvlscalingvisionfoundation}.
+
+In this paper, besides achieving state-of-the-art vision-language performance, we further introduce speech understanding and generating capabilities into our ***EMOVA***.
+
+### Speech Large Language Models (SLLMs) 
+
+SLLMs empower speech interaction with LLMs.
+\textit{Continuous SLLMs}~\citep{wu2023decoder,chu2024qwen2audiotechnicalreport} utilize the speech encoders~\citep{radford2022robustspeechrecognitionlargescale} to extract continuous speech embeddings for LLM, which, however, only support speech understanding, relying on external TTS modules for speech generation, and therefore, hampering real-time interaction.
+\textit{Discrete SLLMs}~\citep{zhang2023speechgpt}, instead, first discretize speech signals with speech tokenizers, followed by auto-regressive modeling.
+Recent works~\citep{fang2024llamaomniseamlessspeechinteraction,xie2024mini} further combine the continuous speech encoders with the discrete speech tokenizers for better performance.
+Although effective, none of the existing works explore speech style controllability in SLLMs (\eg, genders, emotions, and pitches), which is essential for real-life spoken dialogue.
+
+### Omni-modal Large Language Models
+
+Omni-modal LLMs support visual, text, and speech capabilities with a unified architecture simultaneously.
+Similar to the continuous SLLMs, InternOmni~\citep{chen2024internvlscalingvisionfoundation} and VITA~\citep{fu2024vitaopensourceinteractiveomni} connect a speech encoder with VLLMs, supporting speech understanding only.
+Instead, AnyGPT~\citep{zhan2024anygptunifiedmultimodalllm} proposes a unified architecture to discretize and conduct auto-regressive modeling for image, text, and audio simultaneously, which, however, suffers from inevitable information loss brought by discretization, especially for the high-resolution visual inputs.
+In this work, we propose ***EMOVA***, the very first unified Omni-modal Large Language Models with state-of-the-art vision-language and speech performance at the same time. 
+
 ## 3.Methodology: 方法
 
 ## 4.Experiments: 实验
