--- a/Models/MultiModal/2024.09.26_EMOVA.md
+++ b/Models/MultiModal/2024.09.26_EMOVA.md
@@ -120,6 +120,66 @@ In this work, we propose ***EMOVA***, the very first unified Omni-modal Large La
 
 ## 3.Methodology: 方法
 
+### Architecture
+
+#### Formulation
+
+Denote the Large Language Model (LLM) as $f(\cdot)$ and the text, visual and speech inputs as $\textbf{X}_T$, $\textbf{X}_V$ and $\textbf{X}_S$, respectively.
+$\textbf{X}_T$ is converted to discrete tokens $\textbf{U}_T$ via a text tokenizer~\citep{gage1994new}, while the visual input $\textbf{X}_V$ is first encoded with a vision encoder $v(\cdot)$ as $\textbf{E}_V = v(\textbf{X}_V)$, and then projected into the text embedding space with a projector $p(\cdot)$ as $\textbf{H}_V = p(\textbf{E}_V)$.
+As for the speech input $\textbf{X}_S$, a \textit{Speech-to-Unit} (S2U) procedure is required.
+Specifically, $\textbf{X}_S$ first passes through a speech encoder $s(\cdot)$ as $\textbf{E}_S = s(\textbf{X}_S)$, which is then discretized by the quantizer $q(\cdot)$ as $\textbf{U}_S = q(\textbf{E}_S)$.
+The LLM $f(\cdot)$ is then trained to compute the joint probability of the output text and speech units $\textbf{U}_T^{o},\textbf{U}_S^{o}$ as
+
+$$
+    \mathbb{P}(\textbf{U}_T^{o},\textbf{U}_S^{o} | \textbf{U}_T,\textbf{U}_S,\textbf{H}_V) = \prod_{i=1}^L \mathbb{P}(\boldsymbol{x}_i|\textbf{U}_{T,<i}^{o},\textbf{U}_{S,<i}^{o},\textbf{U}_T,\textbf{U}_S,\textbf{H}_V),
+$$
+
+where $\boldsymbol{x}_i\in \textbf{U}_T^{o}\cup\textbf{U}_S^{o}$ and $L=|\textbf{U}_T^{o}|+|\textbf{U}_S^{o}|$. 
+The output response units $\textbf{U}_S^{o}$ are then recovered into the output speech waveform $\textbf{Y}_S^{o}$ via a \textit{Unit-to-Speech} (U2S) decoder $d(\cdot,\cdot)$ together with an emotion style embedding $\textbf{E}_{style}^o$ to realize vivid emotional spoken dialogue controllability (Sec.~\ref{sec:speech_tokenizer}).
+
+##### LLM
+
+We adopt the LLaMA-3.1-8B~\citep{dubey2024llama} as our base LLM $f(\cdot)$, due to its superior performance among publicly available checkpoints, which is equipped with a tiktoken text tokenizer and a vocabulary size of 128,256, supporting both multilingual textual inputs and outputs. 
+
+##### Vision encoder and projector
+
+We utilize InternViT-6B~\citep{chen2024internvlscalingvisionfoundation} as our visual encoder $v(\cdot)$ with $448\times 448$ base resolution, and C-Abstractor~\citep{cha2024honeybee} with two ResBlocks (both before and after the pooling layer) and $4\times$ downsample rate as vision projector $p(\cdot)$.
+To process the high-resolution inputs, the high-resolution image-slicing~\citep{liu2024llavanext} is used, where visual tokens for one image are concatenation with a low-resolution thumbnail and the origin high-resolution image with separators in each line, allowing a maximum of nine tiles during training.
+
+#### Speech Tokenization
+
+##### Speech-to-unit (S2U) tokenizer.
+
+Following \cite{tao2024toneunitspeechdiscretizationapproach}, we adopt the SPIRAL~\citep{huang2022spiral} architecture for the speech encoder $s(\cdot)$ to capture both phonetic and tonal information, which is then discretized by the quantizer $q(\cdot)$ utilizing the finite scalar quantization (FSQ) ~\citep{mentzer2023finite}.
+The size of the speech codebook is 4,096, while the sample rate is 25 tokens per second.
+Once discretized, the speech modality can be simply integrated into LLMs by concatenating the text vocabulary and speech codebook.
+
+Our S2U tokenizer provides the following advantages: 
+1) \textit{Data efficiency}: after pre-training on large-scale unlabeled speech data, it requires only a small amount of speech-text pair data for fine-tuning.
+2) \textit{Bilingual}: the speech codebook is shared among different languages (\ie, English and Chinese), sharing unit modeling abilities across languages.
+Check more training details and comparisons with other speech tokenizers~\citep{zhang2023speechtokenizer} in Appendix~\ref{app:s2u training}.
+
+##### Semantic-acoustic disentanglement.
+
+To seamlessly align speech units with the highly semantic embedding space of LLMs, we opt for decoupling the semantic contents and acoustic styles of input speeches.
+Specifically, given input speechs $\textbf{X}_S$, both semantic embedding $\textbf{E}_{semantic}$ and style embeddings $\textbf{E}_{style}$ are extracted separately, while only the $\textbf{E}_{semantic}$ is quantified by $q(\cdot)$ to generate speech units $\textbf{U}_S$.
+By changing $\textbf{E}_{style}$ while maintaining the same $\textbf{E}_{semantic}$, we can easily control speech styles without disturbing the semantic contents of recovered speeches.
+Moreover, the disentanglement facilitates modality alignment among speeches and texts, as later shown in Sec.~\ref{sec_speech_in}.
+
+##### Unit-to-speech (U2S) detokenizer with style control.
+
+Building on VITS \citep{kim2021conditional}, our U2S detokenizer adopts a conditional VAE architecture (see Fig.~\ref{fig:sdecoder}). 
+To achieve vivid style controls, we utilize the semantic-style disentanglement of our S2U tokenizer (as discussed above) and adopt a novel style embedding to control the speech styles (\eg, speaker identities, emotions, and pitches).
+Specifically, the LLM $f(\cdot)$ is trained to generate both the output speech units $\textbf{U}_S^{o}$ and a style label.
+The speech units $\textbf{U}_S^{o}$ are converted to unit embeddings $\textbf{E}_{semantic}^{o}$, while the style label is utilized to generate a unique style prototype $\textbf{E}_{style}^{o}$. 
+Both $\textbf{E}_{semantic}^{o}$ and $\textbf{E}_{style}^{o}$ are taken as inputs to speech decoder $d(\cdot,\cdot)$ to synthesize the output speech waveform $\textbf{Y}_{S}^{o}$.
+See Appendix~\ref{app: sec_u2s} for more details.
+
+Our U2S detokenizer is pre-trained on LibriTTS~\citep{zen2019libritts} and AISHELL-1~\citep{bu2017aishell} and subsequently fine-tuned on synthetic style-rich speech data.
+Specifically, due to the scarcity of real-life style-rich data, we utilize TTS tools~\citep{du2024cosyvoice} to synthesize speech samples diverse in genders, pitches, and emotions. 
+As for style prototypes, Emotion2Vec~\citep{ma2023emotion2vec} is adopted to select the most representative samples with the highest confidence in conveying the desired style.
+Our empirical results reveal that even one representative style reference speech has been sufficient to control the speech styles flexibly and precisely.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
