--- a/Models/Speech_LLM/2024.06.03_ControlSpeech.md
+++ b/Models/Speech_LLM/2024.06.03_ControlSpeech.md
@@ -325,7 +325,7 @@
 > As illustrated in Fig.02, ***ControlSpeech*** is fundamentally an encoder-decoder model based on [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) for codec generation.
 > The dashed box represents frame-level features, while the solid box represents global features.
 > The ***Style Mixture Semantic Density (SMSD)*** module samples style text to generate corresponding global style representations, which are then combined with text representations from the text encoder via a cross-attention module.
-> These combined representations are fed into the duration prediction model and subsequently into the codec generator, which is a non-autoregressive [Conformer](../ASR/2020.05.16_Conformer.md) based on mask iteration and parallel generation.
+> These combined representations are fed into the duration prediction model and subsequently into the codec generator, which is a non-autoregressive [Conformer](../../Models/_Basis/2020.05.16_Conformer.md) based on mask iteration and parallel generation.
 > The timbre extractor is a Transformer encoder that converts the output of the speech encoder into a global vector, representing the timbre attributes.
 > By inputting a style description $X_s$, a content text $X_c$, and a speech prompt $X_t$, ***ControlSpeech*** aims to sequentially generate the corresponding style codec $Y_s$, content codec $Y_c$, and timbre embedding $Y_t$.
 > These representations are then concatenated and upsampled into speech through the [pre-trained codec decoder](../Diffusion/2024.03.05_NaturalSpeech3.md).
@@ -342,7 +342,7 @@
 ![](Images/2024.06.03_ControlSpeech_Fig.02.png)
 
 ***风格混合语义密度 (Style Mixture Semantic Density, SMSD)*** 模块采样风格文本以生成对应的全局风格表示, 并通过交叉注意模块与文本编码器的表示相结合.
-这些结合的表示被输入到时长预测模型然后传入编解码生成器, 该编解码生成器是基于掩码迭代和并行生成的非自回归 [Conformer](../ASR/2020.05.16_Conformer.md).
+这些结合的表示被输入到时长预测模型然后传入编解码生成器, 该编解码生成器是基于掩码迭代和并行生成的非自回归 [Conformer](../../Models/_Basis/2020.05.16_Conformer.md).
 音色提取器则是一个 Transformer 编码器, 它将语音编码器的输出转换为全局向量, 代表音色属性.
 通过输入风格描述 $X_s$, 内容文本 $X_c$, 语音提示 $X_t$, ***ControlSpeech*** 试图依次生成对应的风格编解码 $Y_s$, 内容编解码 $Y_c$, 音色嵌入 $Y_t$.
 这些表示之后拼接后通过预训练编解码器解码器 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 进行上采样, 生成语音.
@@ -822,10 +822,10 @@ C Training and inference settings
 > For the implementation of the basic MDN network model, we largely followed the approach described in [12].
 D Model architecture in the ***ControlSpeech***
 Follow [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md), the basic architecture of codec encoder and codec decoder follows [DAC](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md) and employs the SnakeBeta activation function ([BigVGAN](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
-> The timbre extractor consists of several [Conformer](../ASR/2020.05.16_Conformer.md) blocks.
+> The timbre extractor consists of several [Conformer](../../Models/_Basis/2020.05.16_Conformer.md) blocks.
 > We use Nqc = 2, Nqp = 1, Nqd = 3 as the number of quantizers for each of the three FVQ Qc, Qp, Qd, the codebook size for all the quantizers is 1024.
 > Text encoder and variance adaptor share the similar architecture which is comprised of several FFT blocks or attention layers as used by [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md).
-> The codec generator is a decoder primarily based on [Conformer](../ASR/2020.05.16_Conformer.md) blocks, similar to [MobileSpeech](2024.02.14_MobileSpeech.md).
+> The codec generator is a decoder primarily based on [Conformer](../../Models/_Basis/2020.05.16_Conformer.md) blocks, similar to [MobileSpeech](2024.02.14_MobileSpeech.md).
 > However, we opted for fewer encoder layers and a smaller parameter count in the codec generator.
 E ***VccmDataset*** details
 We use the gender labels available in the online metadata.
