--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -140,7 +140,7 @@ We use ViSQOL\cite{hines2015visqol} as an audio quality assessment metric.
 Since the background can interfere with vocal evaluation, we separate the vocals and background of the generated music using a pre-trained separation model\cite{seperate}. 
 We then calculate the similarity between the generated vocal part and the original vocal part with a pre-trained speaker similarity model\cite{speaker} and use [Whisper [36]](../Speech_LLM/2022.12.06_Whisper.md)-v2 to compute the Word Error Rate (WER) of the generated vocal part as the vocal clarity evaluation metric.
 
-In the ***MuEncoder*** setting, we employ a 13-layer [Conformer [37]](../ASR/2020.05.16_Conformer.md) model. 
+In the ***MuEncoder*** setting, we employ a 13-layer [Conformer [37]](../../Models/_Basis/2020.05.16_Conformer.md) model. 
 We assign a weight of 1 to the music reconstruction loss and 0.2 to the lyrics recognition loss, which consists of both CTC Loss and RNN-T Loss.
 
 In the RVQ setting, we design two configurations for high- and low-bitrate scenarios. 
