--- a/Models/Voice_Conversion/2024.03.03_PAVITS.md
+++ b/Models/Voice_Conversion/2024.03.03_PAVITS.md
@@ -134,7 +134,7 @@ $$
     q(z_2|c_2) = \mathcal{N}(f_{\theta}(z_2); \mu_{\theta}(c_2);\sigma_{\theta}(c_2))\tag{5}
 $$
 
-> Speaker encoder: Considering the APM module’s increased focus on understanding emotional prosody more thoroughly compared to previous models, it’s apparent that speaker characteristics could unintentionally be overlooked during conversion.Recognizing the critical role of fundamental frequency (F0) in speaker modeling [20], we augment the F0 predictor of [VISinger (2021)](../../Models/Singing_Voice/2021.10.17_VISinger.md) by adding multiple one-dimensional convolutional layers and a linear layer to construct the speaker encoder, which tackles the issue effectively.
+> Speaker encoder: Considering the APM module’s increased focus on understanding emotional prosody more thoroughly compared to previous models, it’s apparent that speaker characteristics could unintentionally be overlooked during conversion.Recognizing the critical role of fundamental frequency (F0) in speaker modeling [20], we augment the F0 predictor of [VISinger (2021)](../SVS/2021.10.17_VISinger.md) by adding multiple one-dimensional convolutional layers and a linear layer to construct the speaker encoder, which tackles the issue effectively.
 
 > Emotion descriptor: To enhance **PAVITS**’s emotional naturalness, we employ a specific SER system rooted in Russell’s circumplex theory [22] to predict dimensional emotion representation, encompassing Valence-Arousal-Dominance values as a conditional input.
 > This input guides the capture of nuanced prosody variations, which ensures that while satisfying human perception of emotions at utterance-level, natural prosody variations are retained from segment-level down to frame-level, preserving intricate details.
